<resources>
    <string name="app_name">Gym Notes</string>
    <string name="you_tube_logo">you tube logo</string>
    <string name="delete">Delete</string>
    <string name="youtube">YouTube</string>
    <string name="update">Update</string>
    <string name="url">URL</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="button_to_add_new_exercise">button to add new exercise</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="add_label">Add Exercise</string>
    <string name="calculator_label">Calculator</string>
    <string name="pounds">pounds:</string>
    <string name="kilos">kilos:</string>
    <string name="_0" translatable="false">0</string>
    <string name="dumbbell">dumbbell:</string>
    <string name="barbell">barbell:</string>
</resources>