<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/input_weight_calculator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pounds"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pounds"
        app:layout_constraintStart_toStartOf="@+id/input_weight_calculator"
        app:layout_constraintTop_toBottomOf="@+id/input_weight_calculator" />

    <TextView
        android:id="@+id/kilos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/kilos"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/pounds"
        app:layout_constraintEnd_toStartOf="@+id/answer_kilos"
        app:layout_constraintTop_toTopOf="@+id/pounds" />

    <TextView
        android:id="@+id/barbell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/barbell"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pounds"
        app:layout_constraintTop_toBottomOf="@+id/pounds" />

    <TextView
        android:id="@+id/dumbbell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/dumbbell"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/barbell"
        app:layout_constraintEnd_toStartOf="@+id/dumbbell_weight"
        app:layout_constraintTop_toTopOf="@+id/barbell" />

    <TextView
        android:id="@+id/answer_pounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/pounds"
        app:layout_constraintStart_toEndOf="@+id/pounds"
        app:layout_constraintTop_toTopOf="@+id/pounds" />

    <TextView
        android:id="@+id/answer_kilos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/kilos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/kilos" />

    <TextView
        android:id="@+id/barbell_weight_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/barbell"
        app:layout_constraintStart_toEndOf="@+id/barbell"
        app:layout_constraintTop_toTopOf="@+id/barbell" />

    <TextView
        android:id="@+id/dumbbell_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/dumbbell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dumbbell" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/input_weight_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toTopOf="@+id/input_weight_calculator" />

    <ImageView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        app:layout_constraintTop_toBottomOf="@+id/barbell"
        app:srcCompat="@drawable/one"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/one"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toTopOf="@+id/one"
        app:srcCompat="@drawable/two" />

    <ImageView
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/two"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="@+id/two"
        app:srcCompat="@drawable/five" />

    <ImageView
        android:id="@+id/ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/five"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toTopOf="@+id/five"
        app:srcCompat="@drawable/ten" />

    <ImageView
        android:id="@+id/fifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ten"
        app:layout_constraintStart_toEndOf="@+id/ten"
        app:layout_constraintTop_toTopOf="@+id/ten"
        app:srcCompat="@drawable/fifteen" />

    <ImageView
        android:id="@+id/twenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/fifteen"
        app:layout_constraintStart_toEndOf="@+id/fifteen"
        app:layout_constraintTop_toTopOf="@+id/fifteen"
        app:srcCompat="@drawable/twenty" />

    <ImageView
        android:id="@+id/twenty_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/twenty"
        app:layout_constraintStart_toEndOf="@+id/twenty"
        app:layout_constraintTop_toTopOf="@+id/twenty"
        app:srcCompat="@drawable/twenty_five" />

    <TextView
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="-"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_weight_calculator"
        app:layout_constraintStart_toEndOf="@+id/input_weight_calculator"
        app:layout_constraintTop_toTopOf="@+id/input_weight_calculator" />

</androidx.constraintlayout.widget.ConstraintLayout>